files/FRDAQMCRH/Untitled.txt
> go test -race ./cmd/mocqserv
# runtime/cgo
gcc_libinit_windows.c: In function 'x_cgo_sys_thread_create':
gcc_libinit_windows.c:57:12: error: implicit declaration of function '_beginthread' [-Werror=implicit-function-declaration]
   57 |  thandle = _beginthread(func, 0, arg);
      |            ^~~~~~~~~~~~
cc1: all warnings being treated as errors